# Attitude-Meter

./: CMakeLists.txt
dependencies/glad/: glad.h
src/: config.h  glad.c  main.cpp
src/graphics/: AltitudeLines.cpp  AltitudeLines.h  Circle.cpp  Circle.h  QuarterCircle.cpp  QuarterCircle.h  Rectangle.cpp  Rectangle.h  RoundedRectangle.cpp  RoundedRectangle.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h
src/shaders/: fragment.txt  text_fragment.txt  text_vertex.txt  vertex.txt
